Se corrige dirección del vinculo index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recetas</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -16,12 +16,12 @@
     <!-- Bloque que contiene el menú de navegación y el logo con su título -->
     <div class="menu-logo">
         <!-- Logo y Título -->
-        <div class="logo"><a href="../index.html"><img src="./images/chef-hat.png" alt="" width="60px" height="60px"></a><h1>RECETAS LOLA</h1></div>
+        <div class="logo"><a href="./index.html"><img src="./images/chef-hat.png" alt="" width="60px" height="60px"></a><h1>RECETAS LOLA</h1></div>
 
         <!-- Menú de navegación -->
         <nav class="menu">
             <ul>
-                <li><a href="../index.html">HOME</a></li>
+                <li><a href="./index.html">HOME</a></li>
                 <li><a href="#recetas">Mis Recetas</a></li>
 
                 <li><a href="#">Menú 2</a>
