Se modifica imagen receta

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <!-- Enlaces con imágenes a las distintas recetas -->
              <div class="enlaces">
                 <div>
-                    <a href="./misRecetas/emblanco.html#pasos"><img src="./images/emblanco.jpg" alt="sopa de caldo por encima" width="100px" height="100px" ></a>
+                    <a href="./misRecetas/emblanco.html#pasos"><img src="./images/emblanco.jpg" alt="emblanco" width="100px" height="100px" ></a>
                     <p>En blanco</p>
                 </div>
 
