--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -42,7 +42,7 @@
         <div class="pasos">
             <div>
                 <h2>En blanco</h2>
-                <img src="../images/sopa_caldo_encima.jpg" alt="sopa caldo por encima" width="65%">
+                <img src="../images/emblanco.jpg" alt="emblanco" width="65%">
                 <h3>Descripción</h3>
                 <p>Una de las sopas malagueñas más sencilla y tradicional es sin lugar a dudas el "en blanco". 
                     <br>Se trata de una sopa muy humilde cuya base es un caldo de pescado.</p>
