Se alinea input del buscador

--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -37,7 +37,7 @@
 
             <!-- Buscador -->
             <!-- Añadimos a la imagen el evento para cuando se haga 'click' se ejecute la función getVal() -->
-            <input type="text" list="recetas" id="receta" name="receta" placeholder="Buscar"><img src="../images/lupa.png" alt="" width="20px" height="20px" id="buscar" onclick="getVal()">
+            <div><input type="text" list="recetas" id="receta" name="receta" placeholder="Buscar"><img src="../images/lupa.png" alt="" width="20px" height="20px" id="buscar" onclick="getVal()"></div>
             <datalist id="recetas">
                 <option data-val="./emblanco.html#pasos" value="En blanco"></option>
                 <option data-val="./sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
