--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <!-- Buscador -->
             <!-- Añadimos a la imagen el evento para cuando se haga 'click' se ejecute la función getVal() -->
-            <input type="text" list="recetas" id="receta" name="receta" placeholder="Buscar"><img src="./images/lupa.png" alt="" width="20px" height="20px" id="buscar" onclick="getVal()">
+            <div><input type="text" list="recetas" id="receta" name="receta" placeholder="Buscar"><img src="./images/lupa.png" alt="" width="20px" height="20px" id="buscar" onclick="getVal()"></div>
             <datalist id="recetas">
                 <option data-val="./misRecetas/emblanco.html#pasos" value="En blanco"></option>
                 <option data-val="./misRecetas/sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
