--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Bloque que contiene el menú de navegación y el logo con su título -->
     <div class="menu-logo">
         <!-- Logo y Título -->
-        <div class="logo"><a href="./index.html"><img src="./images/chef-hat.png" alt="" width="60px" height="60px"></a><h1>RECETAS LOLA</h1></div>
+        <div class="logo"><a href="./index.html"><img src="./images/chef-hat.png" alt="" width="60px" height="60px"></a><h1>RECETAS CON SABOR</h1></div>
 
         <!-- Menú de navegación -->
         <nav class="menu">
@@ -36,7 +36,10 @@
 
             <!-- Buscador -->
             <!-- Añadimos a la imagen el evento para cuando se haga 'click' se ejecute la función getVal() -->
-            <div><input type="text" list="recetas" id="receta" name="receta" placeholder="Buscar"><img src="./images/lupa.png" alt="" width="20px" height="20px" id="buscar" onclick="getVal()"></div>
+            <div class="search-container">
+                <i class="search-icon"><img src="./images/lupa.png" alt="" width="20px" height="20px" id="buscar" onclick="getVal()"></i>
+                <input class="search-input" type="text" list="recetas" id="receta" name="receta" placeholder="Buscar...">
+            </div>
             <datalist id="recetas">
                 <option data-val="./misRecetas/emblanco.html#pasos" value="En blanco"></option>
                 <option data-val="./misRecetas/sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
