Se añade documento html receta pure

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <datalist id="recetas">
                 <option data-val="./misRecetas/emblanco.html#pasos" value="En blanco"></option>
                 <option data-val="./misRecetas/sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
+                <option data-val="./misRecetas/pure-verduras.html#pasos" value="Puré de verduras"></option>
             </datalist>
         </nav>
         <a name="recetas"></a>
@@ -64,7 +65,12 @@
                 <div>
                     <a href="./misRecetas/sopa_caldo_encima.html#pasos"><img src="./images/sopa_caldo_encima.jpg" alt="sopa de caldo por encima" width="100px" height="100px" ></a>
                     <p>Sopa de caldo "poncima"</p>
-                </div>            
+                </div>     
+                
+                <div>
+                    <a href="./misRecetas/pure-verduras.html#pasos"><img src="./images/pure1.jpg" alt="Puré de verduras" width="100px" height="100px" ></a>
+                    <p>Puré de verduras</p>
+                </div> 
              </div>
             
         </div>
