--- a/misRecetas/pure-verduras.html
+++ b/misRecetas/pure-verduras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sopa de caldo por encima</title>
+    <title>En blanco</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/misRecetas.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -49,48 +49,44 @@
         </nav>
         <a name="pasos"></a>
     </div>
- 
+
     <!-- Contenedor principal -->
     <main class="contenedor">
         <div class="pasos">
             <div>
-                <h2>Sopa de caldo "poncima"</h2>
-                <img src="../images/sopa_caldo_encima.jpg" alt="sopa caldo por encima" width="65%">
+                <h2>Puré de Verduras</h2>
+                <img src="../images/pure1.jpg" alt="Puré de verduras" width="65%">
                 <h3>Descripción</h3>
-                <p>Es un plato tradicional de la provincia de Málaga que tiene distintas variantes y reciben distintos nombres según el pueblo donde se haga.
-                    Como por ejemplo la sopa perota de Álora o la 'aplastá' en Pizarra.
-                </p>
-                <p>La sopa de caldo 'poncima' se trata de una sopa de tomate, pimientos, patata y pan, típica de Coín.</p>
+                <p>Las verduras se convierten en una interesante fuente de vitaminas y nutrientes. Es por ello por lo que su consumo supone un refuerzo para el sistema inmunológico.</p>
+                <p>Son platos muy fáciles de digerir. Se pueden elegir las verduras que más nos gusten o se disponga en el momento en casa. Siempre son todas muy ricas.</p>
             </div>
         </div>
 
         <div class="pasos">
             <h3>Ingredientes</h3>
             <ul>
-                <li>Media cebolla</li>
-                <li>Unos 3 pimientos</li>
-                <li>Dos tomates</li>
-                <li>Pimiento molido (1 cucharadita)</li>
-                <li>Hierbabuena</li>
-                <li>Aceite</li>
-                <li>Unas 3 ó 4 patatas</li>
-                <li>2l. Agua</li>
-                <li>Sal</li>
-                <li>Pan bueno del día anterior</li>
-                <li>Sardinas o boquerones sin espina y fritos (opcional)</li>
+                <li>judias verdes</li>
+                <li>1 tomate</li>
+                <li>½ cebolla</li>
+                <li>patatas</li>
+                <li>calabacín</li>
+                <li>nabo</li>
+                <li>apio</li>
+                <li>puerro</li>
+                <li>zanahoria</li>
+                <li>un muslo de pollo</li>
+                <li>sal</li>
+                <li>un cucharón de aceite</li>
+                <li>agua 1.7l. - 2l. aprox.</li>
             </ul>
 
             <h3>Pasos</h3>
             <ol>
-                <li>En una cacerola se pone a hervir el agua con las patatas, cortadas en rodajas finas, y un poco de sal. Cuando estén cocidas reservar todo.</li>
-                <li>Mientras tanto troceamos la cebolla, pimiento, tomate y en una cacerola lo añadimos junto al aceite para hacer el frito.</li>
-                <li>Una vez tengamos el frito hecho, le añadimos el pimiento molido y dejamos sobre un minuto a fuego suave.</li>
-                <li>Añadir el frito a la cacerola junto a las patatas y el agua, dejar hervir un poco para que se mezclen los sabores y retirar del fuego.</li>
-                <li>Por último añadimos la mezcla de la cacerola a la fuente donde previamente tenemos preparada con el pan cortado en finas rodajas.</li>
-                <li>Se le pueden añadir sardinas o boquerones sin espina y fritos del día anterior.</li>
-                <li>Le ponemos hierbabuena y lo dejamos un poco reposar.</li>
-                <li>Si quedase caldo con frito se puede guardar para el día siguiente, sólo habría que cocer las patatas y cortar el pan.</li>
-                <li>Se acompaña con pepino, melón, uvas…</li>
+                <li>Se echan todos los ingredientes con el agua en la olla y se pone a hervir. Se pone todo a la vez.</li>
+                <li>Dejamos todo hirviendo a fuego medio.</li>
+                <li>En la olla express una vez que hierva se deja una media hora.</li>
+                <li>En la olla convencional una hora aprox.</li>
+                <li>Una vez pasado el tiempo de cocción, se tritura todo muy bien. Se puede pasar por el chino para que quede una textura más fina.</li>
             </ol>
         </div>
     </main>
