--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -44,6 +44,7 @@
             <datalist id="recetas">
                 <option data-val="./emblanco.html#pasos" value="En blanco"></option>
                 <option data-val="./sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
+                <option data-val="./pure-verduras.html#pasos" value="Puré de verduras"></option>
             </datalist>
         </nav>
         <a name="pasos"></a>
