Se añade documento html receta tomates

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                     <a href="./misRecetas/pure-verduras.html#pasos"><img src="./images/pure1.jpg" alt="Puré de verduras" width="100px" height="100px" ></a>
                     <p>Puré de verduras</p>
                 </div> 
+
+                <div>
+                    <a href="./misRecetas/magro-tomates.html#pasos"><img src="./images/magro-tomates.jpg" alt="Puré de verduras" width="100px" height="100px" ></a>
+                    <p>Magro con tomates</p>
+                </div> 
              </div>
             
         </div>
