--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -45,6 +45,7 @@
                 <option data-val="./emblanco.html#pasos" value="En blanco"></option>
                 <option data-val="./sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
                 <option data-val="./pure-verduras.html#pasos" value="Puré de verduras"></option>
+                <option data-val="./magro-tomates.html#pasos" value="Magro con tomates"></option>
             </datalist>
         </nav>
         <a name="pasos"></a>
