--- a/misRecetas/magro-tomates.html
+++ b/misRecetas/magro-tomates.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puré de Verduras</title>
+    <title>Magro con Tomates</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/misRecetas.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -50,44 +50,40 @@
         </nav>
         <a name="pasos"></a>
     </div>
-
+ 
     <!-- Contenedor principal -->
     <main class="contenedor">
         <div class="pasos">
             <div>
-                <h2>Puré de Verduras</h2>
-                <img src="../images/pure1.jpg" alt="Puré de verduras" width="65%">
+                <h2>Magro con Tomates</h2>
+                <img src="../images/magro-tomates.jpg" alt="Magro con tomates" width="65%">
                 <h3>Descripción</h3>
-                <p>Las verduras se convierten en una interesante fuente de vitaminas y nutrientes. Es por ello por lo que su consumo supone un refuerzo para el sistema inmunológico.</p>
-                <p>Son platos muy fáciles de digerir. Se pueden elegir las verduras que más nos gusten o se disponga en el momento en casa. Siempre son todas muy ricas.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Nesciunt et nostrum necessitatibus ratione? Rerum doloribus harum quo qui nisi assumenda! Cumque quae, ipsa maxime sed atque quibusdam delectus esse nulla.
+                </p>
             </div>
         </div>
 
         <div class="pasos">
             <h3>Ingredientes</h3>
             <ul>
-                <li>judias verdes</li>
-                <li>1 tomate</li>
-                <li>½ cebolla</li>
-                <li>patatas</li>
-                <li>calabacín</li>
-                <li>nabo</li>
-                <li>apio</li>
-                <li>puerro</li>
-                <li>zanahoria</li>
-                <li>un muslo de pollo</li>
-                <li>sal</li>
-                <li>un cucharón de aceite</li>
-                <li>agua 1.7l. - 2l. aprox.</li>
+                <li>Media cebolla</li>
+                <li>Unos 2 pimientos</li>
+                <li>4 ó 5 tomates</li>
+                <li>1 lata de tomate triturado</li>
+                <li>500-700gr carne magro de cerdo en trozos</li>
+                <li>Aceite</li>
+                <li>Sal</li>
             </ul>
 
             <h3>Pasos</h3>
             <ol>
-                <li>Se echan todos los ingredientes con el agua en la olla y se pone a hervir. Se pone todo a la vez.</li>
-                <li>Dejamos todo hirviendo a fuego medio.</li>
-                <li>En la olla express una vez que hierva se deja una media hora.</li>
-                <li>En la olla convencional una hora aprox.</li>
-                <li>Una vez pasado el tiempo de cocción, se tritura todo muy bien. Se puede pasar por el chino para que quede una textura más fina.</li>
+                <li>En una cacerola ponemos aceite a calentar. Añadimos la carne a fuego medio - alto. Una vez moreada la carne, la retiramos y reservamos.</li>
+                <li>En el aceite de haber moreado la carne, añadimos la cebolla y el pimiento troceados y pochamos un poco.</li>
+                <li>Mientras tanto pelamos los tomates y los ponemos en la batidora. Retiramos la cebolla y el pimiento de la cacerola y los añadimos junto al tomate. Trituramos todo (tomates pelados, pimiento y cebolla).</li>
+                <li>Volvemos a poner la carne en la cacerola, añadimos la verdura triturada y la lata de tomate. Ponemos a hervir, unos 2 minutos a fuego medio - alto. Tapamos un poco con una tapadera, dejando que salga el vapor.</li>
+                <li>A los 2 minutos bajamos a fuego lento y dejamos unos 45 minutos. </li>
+                <li>Si le faltase aceite se le pone frito. Una vez que se vea el aceite por encima ya estaría el tomate frito, dejar hasta que la carne esté tierna (unos 45 minutos).</li>
             </ol>
         </div>
     </main>
