Se añade documento html receta gazpchuelo

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <option data-val="./misRecetas/sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
                     <option data-val="./misRecetas/pure-verduras.html#pasos" value="Puré de verduras"></option>
                     <option data-val="./misRecetas/magro-tomates.html#pasos" value="Magro con tomates"></option>
+                    <option data-val="./misRecetas/gazpachuelo.html#pasos" value="Gazpachuelo"></option>
                 </datalist>
             </nav>
             <a name="recetas"></a>
@@ -79,6 +80,11 @@
                 <div>
                     <a href="./misRecetas/magro-tomates.html#pasos"><img src="./images/magro-tomates.jpg" alt="Puré de verduras" width="100px" height="100px" ></a>
                     <p>Magro con tomates</p>
+                </div> 
+
+                <div>
+                    <a href="./misRecetas/gazpachuelo.html#pasos"><img src="./images/gazpachuelo1.jpg" alt="Gazpachuelo" width="100px" height="100px" ></a>
+                    <p>Gazpachuelo</p>
                 </div> 
              </div>
             
