Se modifica estilo imagenes index

--- a/index.html
+++ b/index.html
@@ -63,27 +63,27 @@
             <!-- Enlaces con imágenes a las distintas recetas -->
              <div class="enlaces">
                 <div>
-                    <a href="./misRecetas/emblanco.html#pasos"><img src="./images/emblanco.jpg" alt="emblanco" width="100px" height="100px" ></a>
+                    <a href="./misRecetas/emblanco.html#pasos"><img src="./images/emblanco.jpg" alt="emblanco"></a>
                     <p>En blanco</p>
                 </div>
 
                 <div>
-                    <a href="./misRecetas/sopa_caldo_encima.html#pasos"><img src="./images/sopa_caldo_encima.jpg" alt="sopa de caldo por encima" width="100px" height="100px" ></a>
+                    <a href="./misRecetas/sopa_caldo_encima.html#pasos"><img src="./images/sopa_caldo_encima.jpg" alt="sopa de caldo por encima"></a>
                     <p>Sopa de caldo "poncima"</p>
                 </div>     
                 
                 <div>
-                    <a href="./misRecetas/pure-verduras.html#pasos"><img src="./images/pure1.jpg" alt="Puré de verduras" width="100px" height="100px" ></a>
+                    <a href="./misRecetas/pure-verduras.html#pasos"><img src="./images/pure1.jpg" alt="Puré de verduras"></a>
                     <p>Puré de verduras</p>
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/magro-tomates.html#pasos"><img src="./images/magro-tomates.jpg" alt="Puré de verduras" width="100px" height="100px" ></a>
+                    <a href="./misRecetas/magro-tomates.html#pasos"><img src="./images/magro-tomates.jpg" alt="Puré de verduras"></a>
                     <p>Magro con tomates</p>
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/gazpachuelo.html#pasos"><img src="./images/gazpachuelo1.jpg" alt="Gazpachuelo" width="100px" height="100px" ></a>
+                    <a href="./misRecetas/gazpachuelo.html#pasos"><img src="./images/gazpachuelo1.jpg" alt="Gazpachuelo"></a>
                     <p>Gazpachuelo</p>
                 </div> 
              </div>
