Se añade zoom a imagenes index

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="menu">
                 <ul>
                     <li><a href="./index.html">INICIO</a></li>
-                    <li><a href="#recetas">Recetas</a></li>
+                    <li><a href="#misRecetas">Recetas</a></li>
 
                     <li><a href="#">Contacto</a>
                         <!-- Submenú -->
@@ -49,7 +49,7 @@
                     <option data-val="./misRecetas/gazpachuelo.html#pasos" value="Gazpachuelo"></option>
                 </datalist>
             </nav>
-            <a name="recetas"></a>
+            <a name="misRecetas"></a>
         </div>
     </header>
 
