--- a/misRecetas/header.html
+++ b/misRecetas/header.html
@@ -11,7 +11,7 @@
     <nav class="menu">
         <ul>
             <li><a href="../index.html">INICIO</a></li>
-            <li><a href="../index.html#recetas">Recetas</a></li>
+            <li><a href="../index.html#misRecetas">Recetas</a></li>
 
             <li><a href="#">Contacto</a>
                 <!-- Submenú -->
