Se actualizan enlaces

--- a/misRecetas/emblanco.html
+++ b/misRecetas/emblanco.html
@@ -22,6 +22,8 @@
             .catch(error => console.error("Error al cargar el header: ", error))
     </script>
 
+    <a name="pasos"></a>
+
     <!-- Contenedor principal -->
     <main class="contenedor">
         <div class="pasos">
