--- a/misRecetas/magro-tomates.html
+++ b/misRecetas/magro-tomates.html
@@ -21,6 +21,8 @@
             })
             .catch(error => console.error("Error al cargar el header: ", error))
     </script>
+
+    <a name="pasos"></a>
  
     <!-- Contenedor principal -->
     <main class="contenedor">
