Se añaden archivos receta Lentejas

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <option data-val="./misRecetas/pure-verduras.html#pasos" value="Puré de verduras"></option>
                     <option data-val="./misRecetas/magro-tomates.html#pasos" value="Magro con tomates"></option>
                     <option data-val="./misRecetas/gazpachuelo.html#pasos" value="Gazpachuelo"></option>
+                    <option data-val="./misRecetas/lentejas.html#pasos" value="Lentejas"></option>
                 </datalist>
             </nav>
             <a name="misRecetas"></a>
@@ -78,13 +79,18 @@
                 </div> 
 
                 <div>
-                    <a href="./misRecetas/magro-tomates.html#pasos"><img src="./images/magro-tomates.jpg" alt="Puré de verduras"></a>
+                    <a href="./misRecetas/magro-tomates.html#pasos"><img src="./images/magro-tomates.jpg" alt="Magro con tomates"></a>
                     <p>Magro con tomates</p>
                 </div> 
 
                 <div>
                     <a href="./misRecetas/gazpachuelo.html#pasos"><img src="./images/gazpachuelo1.jpg" alt="Gazpachuelo"></a>
                     <p>Gazpachuelo</p>
+                </div> 
+
+                <div>
+                    <a href="./misRecetas/lentejas.html#pasos"><img src="./images/lentejas.png" alt="Lentejas"></a>
+                    <p>Lentejas</p>
                 </div> 
              </div>
             
