--- a/misRecetas/header.html
+++ b/misRecetas/header.html
@@ -33,6 +33,8 @@
             <option data-val="./sopa_caldo_encima.html#pasos" value="Sopa de caldo por encima"></option>
             <option data-val="./pure-verduras.html#pasos" value="Puré de verduras"></option>
             <option data-val="./magro-tomates.html#pasos" value="Magro con tomates"></option>
+            <option data-val="./gazpachuelo.html#pasos" value="Gazpachuelo"></option>
+            <option data-val="./lentejas.html#pasos" value="Lentejas"></option>
         </datalist>
     </nav>
 </div>
