Se modifica receta Lentejas

--- a/misRecetas/lentejas.html
+++ b/misRecetas/lentejas.html
@@ -31,8 +31,12 @@
                 <h2>Lentejas</h2>
                 <img src="../images/lentejas.png" alt="Lentejas" width="65%">
                 <h3>Descripción</h3>
-                <p>Las lentejas son una legumbre nutritiva, versátil y reconfortante, perfectas para disfrutar en cualquier época del año. 
-                    Ricas en proteínas, fibra y minerales, son ideales tanto para platos tradicionales como para preparaciones más creativas.
+                <p>Las lentejas son una excelente fuente de nutrientes esenciales. 
+                    Ricas en proteínas vegetales, fibra y minerales como el hierro y el magnesio, ayudan a fortalecer el sistema inmunológico y a mantener la salud digestiva. 
+                </p>
+                <p>
+                    Además, contienen vitaminas del grupo B, como la B6 y el ácido fólico, fundamentales para el funcionamiento del sistema nervioso. 
+                    Con su bajo contenido en grasas y alto contenido en antioxidantes, las lentejas son un aliado perfecto para una dieta equilibrada y saludable.
                 </p>
             </div>
         </div>
