Se añade receta potaje de habichuelas

--- a/misRecetas/header.html
+++ b/misRecetas/header.html
@@ -35,6 +35,7 @@
             <option data-val="./magro-tomates.html#pasos" value="Magro con tomates"></option>
             <option data-val="./gazpachuelo.html#pasos" value="Gazpachuelo"></option>
             <option data-val="./lentejas.html#pasos" value="Lentejas"></option>
+            <option data-val="./habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
         </datalist>
     </nav>
 </div>
