--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <option data-val="./misRecetas/magro-tomates.html#pasos" value="Magro con tomates"></option>
                     <option data-val="./misRecetas/gazpachuelo.html#pasos" value="Gazpachuelo"></option>
                     <option data-val="./misRecetas/lentejas.html#pasos" value="Lentejas"></option>
+                    <option data-val="./habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
                 </datalist>
             </nav>
             <a name="misRecetas"></a>
@@ -91,6 +92,11 @@
                 <div>
                     <a href="./misRecetas/lentejas.html#pasos"><img src="./images/lentejas.png" alt="Lentejas"></a>
                     <p>Lentejas</p>
+                </div> 
+
+                <div>
+                    <a href="./misRecetas/habichuelas.html#pasos"><img src="./images/habichuelas.png" alt="Potaje de habichuelas"></a>
+                    <p>Potaje de habichuelas o fabada</p>
                 </div> 
              </div>
             
