Se modifica enlace receta potaje de habichuelas

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <option data-val="./misRecetas/magro-tomates.html#pasos" value="Magro con tomates"></option>
                     <option data-val="./misRecetas/gazpachuelo.html#pasos" value="Gazpachuelo"></option>
                     <option data-val="./misRecetas/lentejas.html#pasos" value="Lentejas"></option>
-                    <option data-val="./habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
+                    <option data-val="./misRecetas/habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
                 </datalist>
             </nav>
             <a name="misRecetas"></a>
