Se añaden recetas de cazuela

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recetas</title>
+    <title>Recetas con Sabor</title>
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
@@ -49,6 +49,8 @@
                     <option data-val="./misRecetas/gazpachuelo.html#pasos" value="Gazpachuelo"></option>
                     <option data-val="./misRecetas/lentejas.html#pasos" value="Lentejas"></option>
                     <option data-val="./misRecetas/habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
+                    <option data-val="./misRecetas/cazuela-costilla.html#pasos" value="Cazuela de patatas con costilla"></option>
+                    <option data-val="./misRecetas/cazuela-pollo.html#pasos" value="Cazuela de patatas con pollo"></option>
                 </datalist>
             </nav>
             <a name="misRecetas"></a>
@@ -97,6 +99,16 @@
                 <div>
                     <a href="./misRecetas/habichuelas.html#pasos"><img src="./images/habichuelas.png" alt="Potaje de habichuelas"></a>
                     <p>Potaje de habichuelas o fabada</p>
+                </div> 
+
+                <div>
+                    <a href="./misRecetas/cazuela-costilla.html#pasos"><img src="./images/defecto.png" alt="Cazuela de patatas con costilla"></a>
+                    <p>Cazuela de patatas (con costilla)</p>
+                </div> 
+
+                <div>
+                    <a href="./misRecetas/cazuela-pollo.html#pasos"><img src="./images/defecto.png" alt="Cazuela de patatas con pollo"></a>
+                    <p>Cazuela de patatas (con pollo)</p>
                 </div> 
              </div>
             
