--- a/misRecetas/habichuelas.html
+++ b/misRecetas/habichuelas.html
@@ -33,7 +33,9 @@
                 <h3>Descripción</h3>
                 <p>
                     El potaje de habichuelas, o fabada, es una excelente fuente de nutrientes. Las habichuelas son ricas en proteínas vegetales, fibra y minerales esenciales como el hierro y el magnesio, que ayudan a fortalecer los huesos y el sistema inmunológico.<br>
-                    El chorizo y el tocino aportan vitaminas del grupo B, especialmente la B12, importante para la salud del sistema nervioso y la producción de energía.<br>
+                </p>
+                <p>
+                    El chorizo y el tocino aportan vitaminas del grupo B, especialmente la B12, importante para la salud del sistema nervioso y la producción de energía.
                     Además, este potaje es una excelente fuente de antioxidantes que protegen el cuerpo contra el envejecimiento celular.
                 </p>
             </div>
