--- a/misRecetas/header.html
+++ b/misRecetas/header.html
@@ -36,6 +36,8 @@
             <option data-val="./gazpachuelo.html#pasos" value="Gazpachuelo"></option>
             <option data-val="./lentejas.html#pasos" value="Lentejas"></option>
             <option data-val="./habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
+            <option data-val="./cazuela-costilla.html#pasos" value="Cazuela de patatas con costilla"></option>
+            <option data-val="./cazuela-pollo.html#pasos" value="Cazuela de patatas con pollo"></option>
         </datalist>
     </nav>
 </div>
