--- a/misRecetas/sopa_caldo_encima.html
+++ b/misRecetas/sopa_caldo_encima.html
@@ -57,13 +57,13 @@
             <h3>Pasos</h3>
             <ol>
                 <li>En una cacerola se pone a hervir el agua con las patatas, cortadas en rodajas finas, y un poco de sal. Cuando estén cocidas reservar todo.</li>
-                <li>Mientras tanto troceamos la cebolla, pimiento, tomate y en una cacerola lo añadimos junto al aceite para hacer el frito.</li>
-                <li>Una vez tengamos el frito hecho, le añadimos el pimiento molido y dejamos sobre un minuto a fuego suave.</li>
-                <li>Añadir el frito a la cacerola junto a las patatas y el agua, dejar hervir un poco para que se mezclen los sabores y retirar del fuego.</li>
+                <li>Mientras tanto troceamos la cebolla, pimiento, tomate y en una cacerola lo añadimos junto al aceite para hacer el sofrito.</li>
+                <li>Una vez tengamos el sofrito hecho, le añadimos el pimiento molido y dejamos sobre un minuto a fuego suave.</li>
+                <li>Añadir el sofrito a la cacerola junto a las patatas y el agua, dejar hervir un poco para que se mezclen los sabores y retirar del fuego.</li>
                 <li>Por último añadimos la mezcla de la cacerola a la fuente donde previamente tenemos preparada con el pan cortado en finas rodajas.</li>
                 <li>Se le pueden añadir sardinas o boquerones sin espina y fritos del día anterior.</li>
                 <li>Le ponemos hierbabuena y lo dejamos un poco reposar.</li>
-                <li>Si quedase caldo con frito se puede guardar para el día siguiente, sólo habría que cocer las patatas y cortar el pan.</li>
+                <li>Si quedase caldo con sofrito se puede guardar para el día siguiente, sólo habría que cocer las patatas y cortar el pan.</li>
                 <li>Se acompaña con pepino, melón, uvas…</li>
             </ol>
         </div>
