Se añaden recetas de cazuela

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
                     <option data-val="./misRecetas/habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
                     <option data-val="./misRecetas/cazuela-costilla.html#pasos" value="Cazuela de patatas con costilla"></option>
                     <option data-val="./misRecetas/cazuela-pollo.html#pasos" value="Cazuela de patatas con pollo"></option>
+                    <option data-val="./misRecetas/cazuela-arroz.html#pasos" value="Cazuela de arroz"></option>
+                    <option data-val="./misRecetas/cazuela-fideos.html#pasos" value="Cazuela de fideos"></option>
                 </datalist>
             </nav>
             <a name="misRecetas"></a>
@@ -109,6 +111,16 @@
                 <div>
                     <a href="./misRecetas/cazuela-pollo.html#pasos"><img src="./images/defecto.png" alt="Cazuela de patatas con pollo"></a>
                     <p>Cazuela de patatas (con pollo)</p>
+                </div> 
+
+                <div>
+                    <a href="./misRecetas/cazuela-arroz.html#pasos"><img src="./images/defecto.png" alt="Cazuela de arroz"></a>
+                    <p>Cazuela de arroz</p>
+                </div> 
+
+                <div>
+                    <a href="./misRecetas/cazuela-fideos.html#pasos"><img src="./images/defecto.png" alt="Cazuela de fideos"></a>
+                    <p>Cazuela de fideos</p>
                 </div> 
              </div>
             
