--- a/misRecetas/header.html
+++ b/misRecetas/header.html
@@ -38,6 +38,8 @@
             <option data-val="./habichuelas.html#pasos" value="Potaje de habichuelas o fabada"></option>
             <option data-val="./cazuela-costilla.html#pasos" value="Cazuela de patatas con costilla"></option>
             <option data-val="./cazuela-pollo.html#pasos" value="Cazuela de patatas con pollo"></option>
+            <option data-val="./cazuela-arroz.html#pasos" value="Cazuela de arroz"></option>
+            <option data-val="./cazuela-fideos.html#pasos" value="Cazuela de fideos"></option>
         </datalist>
     </nav>
 </div>
