Se modifica archivos cazuela

--- a/misRecetas/cazuela-arroz.html
+++ b/misRecetas/cazuela-arroz.html
@@ -31,7 +31,7 @@
                 <h2>Cazuela de arroz</h2>
                 <img src="../images/defecto.png" alt="sopa caldo por encima" width="65%">
                 <h3>Descripción</h3>
-                <p>La cazuela de arroz es un plato típico de la costa mediterránea española, especialmente en la Comunidad Valenciana y Murcia.</p>
+                <p>La cazuela de arroz o arroz caldoso con marisco o conejo es un plato típico de la comarca del Valle del Guadalhorce, se hace también con fideos, muy típico en zonas rurales de Pizarra y Coín.</p>
                 <p>Es un plato completo, sabroso y lleno de nutrientes, ideal como comida principal.</p>
                 <p>
                     Desde el punto de vista nutricional, es un plato equilibrado: el arroz aporta carbohidratos complejos para la energía, las gambas y almejas suministran proteínas de alta calidad, yodo, hierro, zinc y vitamina B12; las verduras (tomate, pimientos, alcachofas) suman fibra, antioxidantes, vitamina C, ácido fólico y potasio. 
