--- a/misRecetas/cazuela-fideos.html
+++ b/misRecetas/cazuela-fideos.html
@@ -31,7 +31,7 @@
                 <h2>Cazuela de fideos</h2>
                 <img src="../images/defecto.png" alt="sopa caldo por encima" width="65%">
                 <h3>Descripción</h3>
-                <p>La cazuela de fideos es uno de los tipos de cazuela de la cocina tradicional malagueña.</p>
+                <p>La cazuela de fideos es uno de los tipos de cazuela de la cocina tradicional malagueña, muy típico en zonas del Guadalhorce de Pizarra y Coín.</p>
                 <p>Desde el punto de vista nutricional, es un plato equilibrado:</p>
                 <ul>
                     <li>Fideos: aportan carbohidratos complejos, fuente de energía.</li>
